Day-03/sg.tf
#resource "aws_security_group" "allow_tls" {
 # name        = "allow_tls"
 # description = "Allow TLS inbound traffic and all outbound traffic"
 # vpc_id      = "vpc-03466e1f3fadd0f91"

 # tags = {
#    Name = "tf-day-03-sg"
 # }
#}
